--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
 								<li class="icon fa-bolt">8 yrs. Active Duty AF. Bachelor’s degree in Management/Computer Information Systems.  
                                                                     Associate’s degree in Health Services Management.  Microsoft Certified Systems Engineer (MCSE), MCSA.  
                                                                     CompTIA certifications: Security+ CEU, Network+, and A+.  </li>
-                                                                <li class="icon fa-code">Microsoft SharePoint, Microsoft FrontPage, Dreamweaver, HTML/CSS, JavaScript, PL/SQL, Java, C++, Python, 
-                                                                    VisualBasic, .NET, shell, Powershell, Visual Studio IDE, VSCode IDE, NetBeans IDE</li>
+                                                                <li class="icon fa-code">HTML/CSS, JavaScript, React.JS, 
+								    PL/SQL, Java, C++, Python, VisualBasic, .NET, Shell, Powershell,
+                                                                    Visual Studio IDE, VSCode IDE, NetBeans IDE, Microsoft SharePoint, Microsoft FrontPage, Dreamweaver</li>
                                                                 <li class="icon fa-laptop">Replacement, installation, troubleshooting, and configuration of:<br>
                                                                     VoIP telephones, PC motherboards, CPU’s, Hard Drives, Modems (Internal, External, PCI/MCIA), 
                                                                     Network Interface Cards, Sound/Video Cards, Power Supplies, Printers, Scanners, HP laser/inkjet 
