updated resume content

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<h2>about me</h2>
 						</header>
 						<div class="content">
-							<p><strong>I have</strong> been working in IT systems and operations for 15 years.
+							<p><strong>I have</strong> been working in IT systems and operations for 17 years.
                                                              Most of my professional work has been with the U.S. Air Force; 
                                                              specializing in Windows, UNIX/Linux, and .Net and Java HR Web applications – enterprise field support for 
                                                              client/workstations and Servers (Application/Database/File Servers), ranging from 8 to over 1 million end-users.
@@ -182,7 +182,7 @@
 						<div class="content">
 							<p><strong>Please</strong> feel free to download my current resume for offline review.</p>
 							<ul class="actions">
-								<li><a href="assets/Deluna-Resume-2020.pdf" download="assets/Deluna-Resume-2020.pdf" class="button primary large">Download Resume (PDF)</a></li>
+								<li><a href="assets/Deluna-Resume-2021.pdf" download="assets/Deluna-Resume-2021.pdf" class="button primary large">Download My Resume (PDF)</a></li>
 								<li><a href="#" class="button large">Back to Top</a></li>
 							</ul>
 						</div>
