updated years and IDEs

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<h2>about me</h2>
 						</header>
 						<div class="content">
-							<p><strong>I have</strong> been working in IT systems and operations for 17 years.
+							<p><strong>I have</strong> been working in IT systems and operations for 19 years.
                                                              Most of my professional work has been with the U.S. Air Force; 
                                                              specializing in Windows, UNIX/Linux, and .Net and Java HR Web applications – enterprise field support for 
                                                              client/workstations and Servers (Application/Database/File Servers), ranging from 8 to over 1 million end-users.
@@ -58,7 +58,7 @@
                                                                     CompTIA certifications: Security+ CEU, Network+, and A+.  </li>
                                                                 <li class="icon fa-code">HTML/CSS, JavaScript, React.JS, 
 								    PL/SQL, Java, C++, Python, VisualBasic, .NET, Shell, Powershell,
-                                                                    Visual Studio IDE, VSCode IDE, NetBeans IDE, Microsoft SharePoint, Microsoft FrontPage, Dreamweaver</li>
+                                                                    IDE's (Visual Studio, VSCode, NetBeans, IntelliJ) Microsoft SharePoint, Microsoft FrontPage, Dreamweaver</li>
                                                                 <li class="icon fa-laptop">Replacement, installation, troubleshooting, and configuration of:<br>
                                                                     VoIP telephones, PC motherboards, CPU’s, Hard Drives, Modems (Internal, External, PCI/MCIA), 
                                                                     Network Interface Cards, Sound/Video Cards, Power Supplies, Printers, Scanners, HP laser/inkjet 
