add linkedin icon

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 							<h2>my projects</h2>
 						</header>
 						<div class="content">
-							<p><strong>Projects</strong> below are samples of my current programming work.</p>
+							<p><strong>Projects</strong> below are samples of my programming work. See my Resume and GitHub/LinkedIn (bottom of page) for <i>current</i> work.</p>
                                                         <!-- Section -->
 								<section>
 									<header>
@@ -233,7 +233,7 @@
 									<h3>online</h3>
 									<ul class="icons">
 										<li><a href="https://github.com/scoutit/" class="icon fa-github"><span class="label">GitHub (recursive reference)</span></a></li>
-										<!-- <li><a href="#" class="icon fa-codepen"><span class="label">Codepen</span></a></li> -->
+										<li><a href="https://www.linkedin.com/in/ernesto-ernie-d-760877209/" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
 									</ul>
 								</li>
 							</ul>
