added maze game projedt

--- a/index.html
+++ b/index.html
@@ -81,7 +81,22 @@
 						</header>
 						<div class="content">
 							<p><strong>Projects</strong> below are samples of my programming work. See my Resume and GitHub/LinkedIn (bottom of page) for <i>current</i> work.</p>
-                                                        <!-- Section -->
+                            <!-- Section -->
+								<section>
+									<header>
+										<h3>Maze Game (React.JS/Javascript)</h3>
+                                            <p>This Single-Page Application was written in React.JS as a way to interect with hundreds/thousands of online concurrent users.
+												It displays a few counting/ticking components all at once. This is currently (2025) still a work in progress.
+												It is basically complete, except for some minor tweaks before going into a Production environment. So, more to follow.
+                                            </p>
+									</header>
+									<div class="content">
+										<div class="gallery">
+											<a href="images/gallery/fulls/mazegame_main.png" class="landscape"><img src="images/gallery/thumbs/mazegame_main_865x451.png" alt="maze game main pic" /></a>
+                                        </div>
+									</div>
+								</section>
+							<!-- Section -->
 								<section>
 									<header>
 										<h3>TradingCardz (Java)</h3>
