--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<h2>about me</h2>
 						</header>
 						<div class="content">
-							<p><strong>I have</strong> been working in IT systems and operations for 19 years.
+							<p><strong>I have</strong> been working in IT systems and operations for 20+ years.
                                                              Most of my professional work has been with the U.S. Air Force; 
                                                              specializing in Windows, UNIX/Linux, and .Net and Java HR Web applications – enterprise field support for 
                                                              client/workstations and Servers (Application/Database/File Servers), ranging from 8 to over 1 million end-users.
