add resume link

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <header>
           <h1>Hello.</h1>
           <p>My name is Ernie DeLuna. Welcome to my online portfolio.</p>
+          <p>
+            <a href="#my-resume">Click this to jump to my resume.</a>
+          </p>
           <ul class="actions">
             <li>
               <a href="#first" class="arrow scrolly"
@@ -361,7 +364,7 @@
       <!-- Section --><!-- my resume -->
       <section>
         <header>
-          <h2>my resume</h2>
+          <h2 id="my-resume">my resume</h2>
         </header>
         <div class="content">
           <p>
