rearrange sections and add more text for it

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
               </div>
             </div>
           </section>
+
           <!-- Section -->
           <section>
             <header>
@@ -211,6 +212,55 @@
               </div>
             </div>
           </section>
+
+          <!-- Section -->
+          <section>
+            <header>
+              <h3>Admin Stuff (windows/powershell)</h3>
+              <p>
+                I made this Powershell program to assist with common job-related
+                actions when I was working in Operations. I basically lumped
+                most of my commonly used scripts into a WinForms GUI using
+                several .NET components. If it was a DB script that I needed to
+                run, this program first ensured that it was using a stored (at
+                first-run) SecureString for password, <i>and</i> that the DB
+                connection was ensured before running it.
+              </p>
+            </header>
+            <div class="content">
+              <div class="gallery">
+                <a
+                  href="images/gallery/fulls/adminstuff_main.png"
+                  class="landscape"
+                  ><img
+                    src="images/gallery/thumbs/adminstuff_main_1159x702.png"
+                    alt="main admin pic"
+                /></a>
+                <a
+                  href="images/gallery/fulls/adminstuff_browse1.png"
+                  class="portrait"
+                  ><img
+                    src="images/gallery/thumbs/adminstuff_browse1_533x636.png"
+                    alt="admin browse 1 pic"
+                /></a>
+                <a
+                  href="images/gallery/fulls/adminstuff_browse2.png"
+                  class="portrait"
+                  ><img
+                    src="images/gallery/thumbs/adminstuff_browse2_717x761.png"
+                    alt="admin browse 2 pic"
+                /></a>
+                <a
+                  href="images/gallery/fulls/adminstuff_script.png"
+                  class="landscape"
+                  ><img
+                    src="images/gallery/thumbs/adminstuff_script_972x765.png"
+                    alt="admin script pic"
+                /></a>
+              </div>
+            </div>
+          </section>
+
           <!-- Section -->
           <section>
             <header>
@@ -287,50 +337,6 @@
                   ><img
                     src="images/gallery/thumbs/milmock_payform_698x513.png"
                     alt="milmock payform pic"
-                /></a>
-              </div>
-            </div>
-          </section>
-
-          <!-- Section -->
-          <section>
-            <header>
-              <h3>Admin Stuff (windows/powershell)</h3>
-              <p>
-                I made this Powershell program to assist with common job-related
-                actions. I basically lumped most of my common scripts into a
-                WinForms GUI using several .NET components.
-              </p>
-            </header>
-            <div class="content">
-              <div class="gallery">
-                <a
-                  href="images/gallery/fulls/adminstuff_main.png"
-                  class="landscape"
-                  ><img
-                    src="images/gallery/thumbs/adminstuff_main_1159x702.png"
-                    alt="main admin pic"
-                /></a>
-                <a
-                  href="images/gallery/fulls/adminstuff_browse1.png"
-                  class="portrait"
-                  ><img
-                    src="images/gallery/thumbs/adminstuff_browse1_533x636.png"
-                    alt="admin browse 1 pic"
-                /></a>
-                <a
-                  href="images/gallery/fulls/adminstuff_browse2.png"
-                  class="portrait"
-                  ><img
-                    src="images/gallery/thumbs/adminstuff_browse2_717x761.png"
-                    alt="admin browse 2 pic"
-                /></a>
-                <a
-                  href="images/gallery/fulls/adminstuff_script.png"
-                  class="landscape"
-                  ><img
-                    src="images/gallery/thumbs/adminstuff_script_972x765.png"
-                    alt="admin script pic"
                 /></a>
               </div>
             </div>
