--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
           </p>
           <ul class="actions">
             <li>
+              <span style="font-size: 0.75em"
+                >(scroll down or click arrow)</span
+              >
               <a href="#first" class="arrow scrolly"
                 ><span class="label">Next</span></a
               >
